[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/end_game_experiences.gd" type="Script" id=1]

[node name="root" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -118.0
margin/top = -68.0
margin/right = -836.0
margin/bottom = -468.0

[node name="VBox" type="VBoxContainer" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 711.0
margin/bottom = 393.0
alignment = 0

[node name="Title" type="RichTextLabel" parent="Panel/VBox"]

rect/min_size = Vector2( 100, 25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 704.0
margin/bottom = 25.0
bbcode/enabled = false
bbcode/bbcode = "Vous êtes mort. Mais vous avez laissé un héritié dérrière vous !"
visible_characters = -1
percent_visible = 1.0

[node name="Earned" type="RichTextLabel" parent="Panel/VBox"]

rect/min_size = Vector2( 0, 25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 29.0
margin/right = 704.0
margin/bottom = 54.0
bbcode/enabled = false
bbcode/bbcode = "Expérience acquise:"
visible_characters = -1
percent_visible = 1.0

[node name="Earned_message" type="RichTextLabel" parent="Panel/VBox"]

rect/min_size = Vector2( 0, 25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 58.0
margin/right = 704.0
margin/bottom = 83.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="HBox_life" type="HBoxContainer" parent="Panel/VBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 87.0
margin/right = 704.0
margin/bottom = 107.0
alignment = 0

[node name="text" type="RichTextLabel" parent="Panel/VBox/HBox_life"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="add" type="Button" parent="Panel/VBox/HBox_life"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 154.0
margin/top = 0.0
margin/right = 174.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="addtext" type="RichTextLabel" parent="Panel/VBox/HBox_life"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 178.0
margin/top = 0.0
margin/right = 328.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="less" type="Button" parent="Panel/VBox/HBox_life"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 108.0
margin/top = 0.0
margin/right = 125.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "-"
flat = false

[node name="HBox_guard_capacity" type="HBoxContainer" parent="Panel/VBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 111.0
margin/right = 704.0
margin/bottom = 131.0
alignment = 0

[node name="text1" type="RichTextLabel" parent="Panel/VBox/HBox_guard_capacity"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="add1" type="Button" parent="Panel/VBox/HBox_guard_capacity"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 154.0
margin/top = 0.0
margin/right = 174.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="addtext1" type="RichTextLabel" parent="Panel/VBox/HBox_guard_capacity"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 178.0
margin/top = 0.0
margin/right = 328.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="less1" type="Button" parent="Panel/VBox/HBox_guard_capacity"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 108.0
margin/top = -24.0
margin/right = 125.0
margin/bottom = -4.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "-"
flat = false

[node name="HBox_guard_time" type="HBoxContainer" parent="Panel/VBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 135.0
margin/right = 704.0
margin/bottom = 155.0
alignment = 0

[node name="text2" type="RichTextLabel" parent="Panel/VBox/HBox_guard_time"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="add2" type="Button" parent="Panel/VBox/HBox_guard_time"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 154.0
margin/top = 0.0
margin/right = 174.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="addtext2" type="RichTextLabel" parent="Panel/VBox/HBox_guard_time"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 178.0
margin/top = 0.0
margin/right = 328.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="less2" type="Button" parent="Panel/VBox/HBox_guard_time"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 108.0
margin/top = -48.0
margin/right = 125.0
margin/bottom = -28.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "-"
flat = false

[node name="HBox_jab_damage" type="HBoxContainer" parent="Panel/VBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 159.0
margin/right = 704.0
margin/bottom = 179.0
alignment = 0

[node name="text3" type="RichTextLabel" parent="Panel/VBox/HBox_jab_damage"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="add3" type="Button" parent="Panel/VBox/HBox_jab_damage"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 154.0
margin/top = 0.0
margin/right = 174.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="addtext3" type="RichTextLabel" parent="Panel/VBox/HBox_jab_damage"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 178.0
margin/top = 0.0
margin/right = 328.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="less3" type="Button" parent="Panel/VBox/HBox_jab_damage"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 108.0
margin/top = -72.0
margin/right = 125.0
margin/bottom = -52.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "-"
flat = false

[node name="HBox_jab_time" type="HBoxContainer" parent="Panel/VBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 183.0
margin/right = 704.0
margin/bottom = 203.0
alignment = 0

[node name="text4" type="RichTextLabel" parent="Panel/VBox/HBox_jab_time"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="add4" type="Button" parent="Panel/VBox/HBox_jab_time"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 154.0
margin/top = 0.0
margin/right = 174.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="addtext4" type="RichTextLabel" parent="Panel/VBox/HBox_jab_time"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 178.0
margin/top = 0.0
margin/right = 328.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="less4" type="Button" parent="Panel/VBox/HBox_jab_time"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 108.0
margin/top = -96.0
margin/right = 125.0
margin/bottom = -76.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "-"
flat = false

[node name="HBox_kick_damage" type="HBoxContainer" parent="Panel/VBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 207.0
margin/right = 704.0
margin/bottom = 227.0
alignment = 0

[node name="text5" type="RichTextLabel" parent="Panel/VBox/HBox_kick_damage"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="add5" type="Button" parent="Panel/VBox/HBox_kick_damage"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 154.0
margin/top = 0.0
margin/right = 174.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="addtext5" type="RichTextLabel" parent="Panel/VBox/HBox_kick_damage"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 178.0
margin/top = 0.0
margin/right = 328.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="less5" type="Button" parent="Panel/VBox/HBox_kick_damage"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 108.0
margin/top = -120.0
margin/right = 125.0
margin/bottom = -100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "-"
flat = false

[node name="HBox_kick_time" type="HBoxContainer" parent="Panel/VBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 231.0
margin/right = 704.0
margin/bottom = 251.0
alignment = 0

[node name="text6" type="RichTextLabel" parent="Panel/VBox/HBox_kick_time"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="add6" type="Button" parent="Panel/VBox/HBox_kick_time"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 154.0
margin/top = 0.0
margin/right = 174.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="addtext6" type="RichTextLabel" parent="Panel/VBox/HBox_kick_time"]

rect/min_size = Vector2( 150, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 178.0
margin/top = 0.0
margin/right = 328.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = "Life"
visible_characters = -1
percent_visible = 1.0

[node name="less6" type="Button" parent="Panel/VBox/HBox_kick_time"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 108.0
margin/top = -144.0
margin/right = 125.0
margin/bottom = -124.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "-"
flat = false

[node name="valider" type="Button" parent="Panel/VBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 255.0
margin/right = 704.0
margin/bottom = 275.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Valider"
flat = false

[connection signal="pressed" from="Panel/VBox/HBox_life/add" to="." method="_on_add_pressed"]

[connection signal="pressed" from="Panel/VBox/HBox_guard_capacity/add1" to="." method="_on_add1_pressed"]

[connection signal="pressed" from="Panel/VBox/HBox_guard_time/add2" to="." method="_on_add2_pressed"]

[connection signal="pressed" from="Panel/VBox/HBox_jab_damage/add3" to="." method="_on_add3_pressed"]

[connection signal="pressed" from="Panel/VBox/HBox_jab_time/add4" to="." method="_on_add4_pressed"]

[connection signal="pressed" from="Panel/VBox/HBox_kick_damage/add5" to="." method="_on_add5_pressed"]

[connection signal="pressed" from="Panel/VBox/HBox_kick_time/add6" to="." method="_on_add6_pressed"]

[connection signal="pressed" from="Panel/VBox/valider" to="." method="_on_valider_pressed"]


